# bam2fastx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bamboo_build.sh  build.sh  meson.build
bamboo_scripts/build_scripts/: bam2fastx_build.sh
bamboo_scripts/specs/: bam2fastx.java  bam2fastx_build.java
include/pacbio/gzfile/: GZFileWriter.h  GZFileWriters.h
include/pacbio/io/: AbstractWriter.h  FileWriters.h  GZFileWriter.h  PlainFileWriter.h  StreamWriter.h
scripts/ci/: build.sh  test.sh
src/: bam2fasta.cpp  bam2fastq.cpp
template/: Version.h.in
tests/: meson.build
tests/cram/: bam2fasta.t  bam2fastq.t
tests/data/: RSII.bam  RSII.bam.pbi  sequel.ccs.bam  sequel.ccs.bam.pbi
